--- a/Notebooks/code_image_demie_table.ipynb
+++ b/Notebooks/code_image_demie_table.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Création d'une nouvelle image de demie table et environnement"
+    "# Create environnement_demie_table.png"
    ]
   },
   {
